tests/error/errors_on_usage/while_new_var.err
Error: Variable not defined (at $FILE:8:11)
  | 
6 |     while x:
7 |         y = 5
8 |     return y
  |            ^ `y` might be undefined ...

Note:
  | 
5 | def foo(x: bool) -> int:
6 |     while x:
  |           - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
